# ZELZIP

./: .editorconfig  .gitignore  .marksman.toml  .npmrc  .prettierignore  COPY.tmd  Cargo.toml  README.md  SECURITY.md  TODO.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/actions/setup-docker/: action.yml
.github/actions/setup-nix/: action.yaml
.github/workflows/: check.yaml  publish-docs-docker.yaml  publish-icebrk-web-docker.yaml  publish-icebrk.yaml  publish-niiebla.yaml  publish-rust-crates.yaml  publish-wasm-npm-libraries.yaml  tests.yaml
credits/: 0197e672-7046-706d-9dd2-c91104e25384.json
dirty/: recreated.ticket.tv1  test.wad  ticket.tv1
dockerfiles/static_server/: Dockerfile
docs/: hierarchy.html  index.html  modules.html
ignores/: repository.ignore
projects/docs/: package.json  pnpm-lock.yaml
projects/docs/docs/: index.md  renus.md  viiento.md
projects/docs/docs/.vitepress/: config.mts
projects/docs/docs/.vitepress/theme/: style.css
projects/docs/docs/niiebla/: index.md  niiebla.md  title_ids.md  wad.md
projects/docs/docs/wiki/: parental-control-master-key-generation-algorithms.md  wiki.md
projects/icebrk/: Cargo.toml  README.md  TODO.md  package.json5  tsconfig.json
projects/icebrk/src/: icebrk.rs  main.rs  v0.rs  v1.rs  v2.rs  v3.rs
projects/icebrk_typedoc/: hierarchy.html  index.html  modules.html
projects/icebrk_typedoc/assets/: navigation.js  search.js
projects/icebrk_typedoc/enums/: Platform.html
projects/icebrk_typedoc/functions/: calculate_v0_master_key.html  calculate_v1_master_key.html  calculate_v2_master_key.html  calculate_v3_master_key.html
projects/icebrk_web/: TODO.md  index.html  package.json  vite.config.ts
projects/icebrk_web/src/: bootstrap.ts  counter.ts  main.ts  style.scss  types.d.ts  vite-env.d.ts
projects/icebrk_web/src/components/: Footer.astro  Header.astro  MasterKeyGeneratorForm.astro  PlatformSelector.astro
projects/icebrk_web/src/pages/: index.astro
projects/landing_page/: package.json  tsconfig.json
projects/niiebla/: Cargo.toml  README.md  TODO.md
projects/niiebla/dirty/: cert-chain.libwiipy.bin.hex  cert-chain.niiebla.bin.hex  forecast-channel.wad  libwiipy-ticket.bin.hex  main.py  niiebla.ticket.bin.hex
projects/niiebla/src/: aes.rs  certificate_chain.rs  common_key.rs  main.rs  niiebla.rs  signed_blob_header.rs  ticket.rs  title_id.rs  title_metadata.rs  wad.rs  wii_common_key.rs
projects/niiebla/src/ticket/: v1.rs
projects/niiebla/src/title_metadata/: content_selector.rs
projects/niiebla/src/wad/: installable.rs
projects/niiebla/src/wad/installable/: certificate_chain.rs  content.rs  ticket.rs  title_metadata.rs
projects/standards/json-schemas/credits/: contributor.1.0.schema.json
projects/toolkit/: README.md  TODO.md  _setup.bash  check.bash  fix.bash  flake.nix  pyproject.toml  run.bash  test.bash  todo.bash
projects/toolkit/_modules/: _log.bash
projects/toolkit/src/: .null-ls_215174_dev.py  .null-ls_555844_main.py  __init__.py  dev.py  main.py  util.py
projects/util/: Cargo.toml  README.md  TODO.md
projects/util/src/: aes.rs  extensions.rs  macros.rs  recall_view.rs  sha.rs  stream_pin.rs  util.rs  view.rs
projects/util/src/extensions/: read.rs  string.rs  write.rs
projects/util/src/view/tests/: read.rs  seek_end.rs  seek_relative.rs  seek_start.rs  write.rs
projects/viiento/: Cargo.toml  test.wad
projects/viiento/src/: viiento.rs
