[workspace]
resolver = "3"
members = ["projects/niiebla", "projects/util", "projects/viiento"]

[profile.release]
strip = true
lto = true

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.12"
byteorder = "1.5.0"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
takes = "0.1.0"
util = { package = "gotre_util", path = "projects/util" }
niiebla = { path = "projects/niiebla" }
cfg-if = "1.0.0"
bitflags = "2.9.1"

[workspace.lints.rust]
"missing_docs" = "warn"

[workspace.lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
use_self = "warn"
