[workspace]
resolver = "3"
members = [
  "projects/niiebla",
  "projects/util",
  "projects/viiento",
  "projects/icebrk",
]

[profile.release]
strip = true
lto = true

[workspace.package]
edition = "2024"

authors = ["The ZELZIP team <contact@zelzip.dev>"]

license = "MPL-2.0"

homepage = "https://zelzip.dev"
repository = "https://github.com/ZELZIP/ZELZIP"

[workspace.dependencies]
thiserror = "2.0.12"
byteorder = "1.5.0"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
block-padding = "0.3.3"
niiebla = { package = "zelzip_niiebla", path = "projects/niiebla" }
cfg-if = "1.0.0"
bitflags = "2.9.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
crypto-common = "0.1.6"
crc = "3.3.0"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
wasm-bindgen-test = "0.3.34"
hmac = "0.12.1"
ctr = "0.9.2"
derive_jserror = "0.1.0"

# Note: Do not use wildcard (`*`) `version`, it will break when publising to `crates.io`,
#       remember to always take care of bumping up this dependency version
util = { package = "zelzip_util", version = "3.0.0", path = "projects/util", features = [
  "std",
] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
use_self = "warn"
