[package]
version = "1.0.0"

name = "zelzip_icebrk"
description = 'Implementation of the different algorithms used on Nintendo consoles to generate the parental control master key.'
authors = ["The ZEL.ZIP team <contact@zel.zip>"]

license = "MPL-2.0"

edition.workspace = true
publish = true

keywords = ["generator", "key", "master-key", "algorightm"]
categories = ["algorithms"]

homepage = "https://zel.zip"
repository = "https://github.com/ZELZIP/ZELZIP"

# TODO(TRACK: https://github.com/rustwasm/wasm-pack/issues/1501): Fix for Bulk Memory Operation on WASM
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
path = "src/icebrk.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
crc.workspace = true
wasm-bindgen.workspace = true
sha2.workspace = true
hmac.workspace = true
thiserror.workspace = true
aes.workspace = true
ctr.workspace = true

# TODO(IMPROVE): Only on WASM + DEBUG
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true
