[package]
name = "zelzip_niiebla"
version = "0.2.0"
edition.workspace = true
publish = true

[lib]
path = "src/niiebla.rs"
crate-type = ["rlib"]

[dependencies]
thiserror.workspace = true
byteorder.workspace = true
aes.workspace = true
cbc.workspace = true
block-padding.workspace = true
util.workspace = true
cfg-if.workspace = true
bitflags.workspace = true
sha1.workspace = true
sha2.workspace = true

[lints]
workspace = true
