[package]
version = "0.2.0"

name = "zelzip_niiebla"
description = "A parsing library for various Nintendo file formats."
authors = ["The ZEL.ZIP team <contact@zel.zip>"]

license = "MPL-2.0"

edition.workspace = true
publish = true

keywords = ["homebrew", "binary-format", "parsing", "dumping", "modding"]
categories = ["parsing"]

homepage = "https://zel.zip"
repository = "https://github.com/ZELZIP/ZELZIP"

[lib]
path = "src/niiebla.rs"
crate-type = ["rlib"]

[dependencies]
thiserror.workspace = true
byteorder.workspace = true
aes.workspace = true
cbc.workspace = true
block-padding.workspace = true
util.workspace = true
cfg-if.workspace = true
bitflags.workspace = true
sha1.workspace = true
sha2.workspace = true

[lints]
workspace = true
