[package]
name = "zelzip_util"
description = "TODO"
version = "1.0.0"
publish = true
license = "MPL-2.0"
edition.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[lib]
path = "src/util.rs"

[dependencies]
byteorder.workspace = true
cfg-if.workspace = true
aes.workspace = true
cbc.workspace = true
sha1.workspace = true
sha2.workspace = true
crypto-common = "0.1.6"

[dev-dependencies]
hex-literal = "1.0.0"

[lints]
workspace = true
