[package]
version = "2.0.0"

name = "zelzip_util"
description = "This library is only intended for internal usage at the ZELZIP monorepo. Please avoid using it directly."

publish = true

# This library should not be used by the general public, better avoid search results on the registry
keywords = []
categories = []

authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[lib]
path = "src/util.rs"

[dependencies]
byteorder.workspace = true
cfg-if.workspace = true
aes.workspace = true
cbc.workspace = true
sha1.workspace = true
sha2.workspace = true
crypto-common.workspace = true

[dev-dependencies]
hex-literal = "1.0.0"

[lints]
workspace = true
