[package]
name = "viiento"
version = "0.1.0"
publish = false

authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "viiento"
path = "src/viiento.rs"

[dependencies]
niiebla.workspace = true

[lints]
workspace = true
